hopefully improve changing stuck issue

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -32,6 +32,7 @@ body > #content {
     padding: 0.75rem 2rem;
     box-shadow: 2px 4px 8px rgba(29,41,52,0.15);
     cursor: pointer;
+    margin: 0 10px;
   }
 
   .btn-primary {
